--- a/index.html.html
+++ b/index.html.html
@@ -94,11 +94,11 @@
       }
       @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?6d03da');
-  src:  url('fonts/icomoon.eot?6d03da#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?6d03da') format('truetype'),
-    url('fonts/icomoon.woff?6d03da') format('woff'),
-    url('fonts/icomoon.svg?6d03da#icomoon') format('svg');
+  src:  url('./new icon/fonts/icomoon.eot?6d03da');
+  src:  url('./new icon/fonts/icomoon.eot?6d03da#iefix') format('embedded-opentype'),
+    url('./new icon/fonts/icomoon.ttf?6d03da') format('truetype'),
+    url('./new icon/fonts/icomoon.woff?6d03da') format('woff'),
+    url('./new icon/fonts/icomoon.svg?6d03da#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
