--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             </div>
                     <div class="row justify-content-center" style="margin:0; padding: 0;">
                         <a href="https://www.facebook.com/pitupanpasteleria" target="_blank"><i class="icon-facebook2"></i></a>
-                        <i class="icon-instagram"></i>
+                        <a href="https://www.instagram.com/pitupanpasteleria/"><i class="icon-instagram"></i></a> 
                         <a href=" https://wa.me/573143280736" target="_blank"><i class="icon-whatsapp"></i></a>
                         <a href="mailto: parraolivia537@gmail.com"><i class="icon-mail4"></i></a>
                     </div>
