--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     .head{
         height: 450px;
         font-family: 'Pacifico', cursive;
+      }
+      .background{
         background-image: url(./images/confeti.jpg);
       }
       .Logo{
@@ -133,7 +135,7 @@
     </style>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid background">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-4 ">
                     <div class="container head">
